--- a/website/templates/linkedin.html
+++ b/website/templates/linkedin.html
@@ -10,9 +10,16 @@
 <body>
     <div>
         <div class="header">
-            <div>
+            <a href="http://127.0.0.1:5000/home">
+                <div>
+                <img class="back-home" src="static/linkedin-images/header-images/back-home-icon.png">
+                </div>
+            </a>
+            <a href="https://www.linkedin.com/feed/">
+              <div>
                 <img class="linkedin-logo" src="static/linkedin-images/header-images/linkedin-logo.png">
-            </div>
+              </div>
+            </a>
             <div>
                 <button class="search-button">
                     <img class="search-logo" src="static/linkedin-images/header-images/search-logo.png">
@@ -22,34 +29,48 @@
                 <input class="search-bar" type="text" placeholder="Search">
             </div>
             <div>
-                <button class="home-button">
+                <a href="https://www.linkedin.com/feed/">
+                  <button class="home-button">
                     <img class="home-logo" src="static/linkedin-images/header-images/home-logo.png">
                     <p class="home-text">Home</p>
-                </button>
+                  </button>
+                </a>
+
             </div>
             <div>
-                <button class="network-button">
+                <a href="https://www.linkedin.com/mynetwork/">
+                   <button class="network-button">
                     <img class="home-logo" src="static/linkedin-images/header-images/my-network-logo.png">
                     <p class="home-text">My Network</p>
-                </button>
+                   </button>
+                </a>
             </div>
             <div>
-                <button class="network-button">
+                <a href="https://www.linkedin.com/jobs/">
+                  <button class="network-button">
                     <img class="home-logo" src="static/linkedin-images/header-images/jobs-logo.png">
                     <p class="home-text">Jobs</p>
-                </button>
+                  </button>
+                </a>
+
             </div>
             <div>
-                <button class="network-button">
+                <a href="https://www.linkedin.com/messaging/">
+                   <button class="network-button">
                     <img class="home-logo" src="static/linkedin-images/header-images/messaging-logo.jpg">
                     <p class="home-text">Messaging</p>
-                </button>
+                   </button>
+                </a>
+
             </div>
             <div>
-                <button class="network-button">
+                <a href="https://www.linkedin.com/notifications/">
+                    <button class="network-button">
                     <img class="home-logo" src="static/linkedin-images/header-images/notifications-logo.png">
                     <p class="home-text">Notifications</p>
-                </button>
+                    </button>
+                </a>
+
             </div>
             <div>
                     <button class="network-button1">
@@ -65,10 +86,12 @@
                 </button>
             </div>
             <div>
-                <button class="work-button">
-                    <p class="premium-text">Get hired faster,</p>
-                    <p class="premium-text">Try Premium free</p>
-                </button>
+                <a href="https://www.linkedin.com/premium/survey/">
+                    <button class="work-button">
+                        <p class="premium-text">Get hired faster, Try Premium free</p>
+                    </button>
+                </a>
+
             </div>
 
 
@@ -99,7 +122,7 @@
                         Contact info
                     </div>
                     <div class="connections">
-                        182 connections
+                        185 connections
                     </div>
                     <div class="three-buttons">
                         <button class="open-to">
@@ -162,7 +185,7 @@
                         <img class="search-appearances-icon" src="static/linkedin-images/left-part-images/search-appearance-icon.png">
                         <div class="search-appearances-tab">
                             <div class="search-appearances">
-                                7 profile views
+                                8 search appearances
                             </div>
                             <div class="search-appearances-description">
                                 See how often you appear in search results.
@@ -256,7 +279,7 @@
                         </button>
                     </div>
                     <div class="connections1">
-                        182 followers
+                        185 followers
                     </div>
                     <div class="below-activity-title">
                         You haven't posted lately
@@ -274,13 +297,13 @@
                     <div class="analytics-text">
                         Experience
                     </div>
-                    <div class="my-network">
+                    <div class="my-network1">
                       <img class="youtube-icon" src="static/linkedin-images/left-part-images/youtube-logo.png">
                       <div class="my-network-together">
                         <div class="youtube-text">
                           Youtube account manager/video editor
                         </div>
-                        <div class="my-network-description">
+                        <div class="my-network-description1">
                             YouTube &#183; Self-employed
                         </div>
                         <div class="youtube-job-duration">
@@ -290,9 +313,9 @@
                             Side job to pay off Mechanical Engineering studies - "The BallGame"                        </div>
                       </div>
                     </div>
-                    <div class="my-network">
+                    <div class="my-network1">
                       <img class="youtube-icon" src="static/linkedin-images/left-part-images/tech387-icon.png">
-                      <div class="my-network-together">
+                      <div class="my-network-together1">
                         <div class="youtube-text">
                           Python/Flask Backend Developer
                         </div>
@@ -313,13 +336,13 @@
                         </div>
                       </div>
                     </div>
-                    <div class="my-network">
+                    <div class="my-network1">
                       <img class="youtube-icon" src="static/linkedin-images/left-part-images/company-logo.png">
                       <div class="my-network-together">
                         <div class="youtube-text">
                           Mechanical Engineer
                         </div>
-                        <div class="my-network-description">
+                        <div class="my-network-description1">
                             TTU energetik d.o.o &#183; Internship
                         </div>
                         <div class="youtube-job-duration">
@@ -336,13 +359,13 @@
                         </div>
                       </div>
                     </div>
-                    <div class="my-network">
+                    <div class="my-network1">
                       <img class="youtube-icon" src="static/linkedin-images/left-part-images/company-logo.png">
                       <div class="my-network-together">
                         <div class="youtube-text">
                           Assistant To The Mechanical Engineer
                         </div>
-                        <div class="my-network-description">
+                        <div class="my-network-description1">
                             CNC HST Technik
                         </div>
                         <div class="youtube-job-duration">
@@ -363,15 +386,15 @@
                         Education
                     </div>
                     <div class="my-network">
-                      <img class="youtube-icon" src="static/linkedin-images/left-part-images/university-logo.png">
+                      <img class="youtube-icon1" src="static/linkedin-images/left-part-images/university-logo.png">
                       <div class="my-network-together">
-                        <div class="youtube-text">
+                        <div class="youtube-text1">
                           Univerzitet u Tuzli
                         </div>
                         <div class="my-network-description">
                             Industrial Engineering
                         </div>
-                        <div class="youtube-job-duration">
+                        <div class="youtube-job-duration1">
                             2016-2021
                         </div>
                       </div>
@@ -387,7 +410,7 @@
                         <div class="youtube-text">
                           ABB Robot Programming Basic
                         </div>
-                        <div class="my-network-description">
+                        <div class="my-network-description1">
                             DKR – German Center for Robotics
                         </div>
                         <div class="youtube-job-duration">
@@ -431,7 +454,7 @@
                         <input class="box" type="checkbox" id="trigger"/>
                         <label for="trigger" >Skills</label>
                             <div class="all-text">
-                            <div class="below-activity-title">
+                            <div class="below-activity-title1">
                                 Engineering
                             </div>
                             <div class="endorsement-row">
@@ -440,7 +463,7 @@
                                      1 endorsement
                                 </div>
                             </div>
-                            <div class="below-activity-title">
+                            <div class="below-activity-title1">
                                 Research
                             </div>
                             <div class="endorsement-row">
@@ -449,7 +472,7 @@
                                      1 endorsement
                                 </div>
                             </div>
-                            <div class="below-activity-title">
+                            <div class="below-activity-title1">
                                 AutoCAD
                             </div>
                             <div class="endorsement-row">
@@ -458,7 +481,7 @@
                                      1 endorsement
                                 </div>
                             </div>
-                            <div class="below-activity-title">
+                            <div class="below-activity-title1">
                                 SOLIDWORKS
                             </div>
                             <div class="endorsement-row">
@@ -467,7 +490,7 @@
                                      1 endorsement
                                 </div>
                             </div>
-                            <div class="below-activity-title">
+                            <div class="below-activity-title1">
                                 CATIA
                             </div>
                             <div class="endorsement-row">
@@ -476,7 +499,7 @@
                                      1 endorsement
                                 </div>
                             </div>
-                            <div class="below-activity-title">
+                            <div class="below-activity-title1">
                                 Youtube
                             </div>
                             <div class="endorsement-row">
@@ -485,7 +508,7 @@
                                      1 endorsement
                                 </div>
                             </div>
-                            <div class="below-activity-title">
+                            <div class="below-activity-title1">
                                 Vegas Pro
                             </div>
                             <div class="endorsement-row">
@@ -494,7 +517,7 @@
                                      1 endorsement
                                 </div>
                             </div>
-                            <div class="below-activity-title">
+                            <div class="below-activity-title1">
                                 Computer-Aided-Design (CAD)
                             </div>
                             <div class="endorsement-row">
@@ -503,7 +526,7 @@
                                      1 endorsement
                                 </div>
                             </div>
-                            <div class="below-activity-title">
+                            <div class="below-activity-title1">
                                 English
                             </div>
                             <div class="endorsement-row">
@@ -512,7 +535,7 @@
                                      1 endorsement
                                 </div>
                             </div>
-                            <div class="below-activity-title">
+                            <div class="below-activity-title1">
                                 Technical Documentation
                             </div>
                             <div class="endorsement-row">
@@ -521,7 +544,7 @@
                                      1 endorsement
                                 </div>
                             </div>
-                            <div class="below-activity-title">
+                            <div class="below-activity-title1">
                                 Python (Programming Language)
                             </div>
                             <div class="endorsement-row">
@@ -530,7 +553,7 @@
                                      1 endorsement
                                 </div>
                             </div>
-                            <div class="below-activity-title">
+                            <div class="below-activity-title1">
                                 Flask
                             </div>
                             <div class="endorsement-row">
@@ -539,7 +562,7 @@
                                      1 endorsement
                                 </div>
                             </div>
-                            <div class="below-activity-title">
+                            <div class="below-activity-title1">
                                 HTML
                             </div>
                             <div class="endorsement-row">
@@ -548,7 +571,7 @@
                                      1 endorsement
                                 </div>
                             </div>
-                            <div class="below-activity-title">
+                            <div class="below-activity-title1">
                                 Cascading Style Sheet (CSS)
                             </div>
                             <div class="endorsement-row">
@@ -568,8 +591,11 @@
                         Edit public profile & URL
                         </div>
                         <button class="question-mark">
-                            <div class="question-mark-text">
+                            <div class="question-mark-sign">
                                 ?
+                            </div>
+                            <div class="question-mark-text">
+                                See and edit how you look to people who are not signed in, and find you through search engines(ex: Google, Bing).
                             </div>
                         </button>
                     </div>
@@ -580,8 +606,11 @@
                         Add profile in another language
                         </div>
                         <button class="question-mark1">
-                            <div class="question-mark-text1">
+                            <div class="question-mark-sign1">
                                 ?
+                            </div>
+                            <div class="question-mark-text">
+                                Creating a profile in another language makes it easier for local business contacts and recruiters to find you on Linkedin.
                             </div>
                         </button>
                     </div>
