--- a/website/templates/mpismo.html
+++ b/website/templates/mpismo.html
@@ -28,15 +28,30 @@
           </div>
         </button>
         <button class="image-name2">
-          <img class="image3" src="static/mpismo-images/linkedin-icon.png">
           <a href="http://127.0.0.1:5000/linkedin">
-            <p class="name6">Emir Alić</p>
+          <div class="image-name-made">
+            <img class="image3" src="static/mpismo-images/linkedin-icon.png">
+            <p class="name7">Emir Alić</p>
+          </div>
+
           </a>
         </button>
         <button class="image-name2">
-          <img class="image4" src="static/mpismo-images/youtube-icon.png">
           <a href="http://127.0.0.1:5000/youtube">
-            <p class="name6">The BallGame</p>
+          <div class="image-name-made">
+            <img class="image4" src="static/mpismo-images/youtube-icon.png">
+            <p class="name7">The BallGame</p>
+          </div>
+
+          </a>
+        </button>
+        <button class="image-name3">
+          <a href="https://github.com/emiralic/website">
+            <div class="image-name-made">
+              <img class="image4" src="static/mpismo-images/github-icon.png">
+              <div class="name8">Emir Alić</div>
+            </div>
+
           </a>
         </button>
       </div>
@@ -45,13 +60,26 @@
     </div>
     <div class="full-text">
       <p class="text-edit"> Motivaciono pismo </p>
-      <div>
-        Vjerujem da me moja poslovna iskustva kao i karakterne osobine čine izvrsnim kandidatom za poziciju investicijskog brokera u vašoj tvrtki.
-Upravo sam završio magisterij ekonomije, smjer Tržište i marketing na Ekonomskom fakultetu u Sarajevu. Tokom studija bio sam predsjednik studentskog marketinškog društva Budući lideri u gospodarstvu.
-Nisam tipičan novopečeni magistar. Dio studija proveo sam u SAD-u, tokom studija radio sam kao agent za radio oglase, također sam se bavio prodajom pretplate za poznate dnevne novine.
-Želim razvijati svoju karijeru u području investicija. Spreman sam i lično  porazgovarati o poziciji u vašoj tvrtki. Stoga ću vas nazvati da dogovorim termin sastanka.
+      <div class="dear">Poštovana/Poštovani,</div>
+      <div class="motivational-letter">
+        Moje ime je Emir Alić, uskoro diplomirani inženjer Mašinstva na Mašinskom fakultetu, Univerziteta u Tuzli, s obzirom da sam trenutno u fazi odrađivanja diplomskog rada.
+        Pored osnovnih obaveza na fakultetu, oduvijek sam pokazivao želju prema edukovanju iz programiranja, gdje sam posljednih nekoliko mjeseci aktivno svakodnevno učio, te izvršavao određene zadatke kako samostalno tako i uz stručnu pomoć.
+      </div>
+      <div class="motivational-letter">
+        Mišljenja sam da kako IT industrija predstavlja sadašnjost, tako da će u budućnosti imati još veću i značajniju ulogu u svakodnevnom životu.
+        Iz toga potiče moja najveća motivacija i želja da radim i napredujem u datoj industriji i na taj način ostavim svoj "pečat".
+        Vjerujem da me moja upornost, želja za učenjem i napredovanje kao i karakterne osobine čine izvrsnim kandidatom za jednu od poziciju u vašoj kompaniji, bilo da se radi o praksi ili probnom radu, s obzirom da mi je trenutno najviše potrebno iskustvo i timski rad sa stručnim licima.
+        <div class="motivational-letter">
+          Kao što sam već napomenuo, posljednih nekoliko mjeseci samostalno učim programski jezik Python, framework Flask, okruženje PyCharm kao i HTML i CSS.
+          Da bih pokazao i primijenio naučena znanja, odlučio sam napraviti jednu vrstu Portfolio stranice, gdje možete vidjeti moj CV, motivaciono pismo, primijenjena znanja iz programiranja, kreiranje i prijavu profila, kao i dva projekta koje sam odradio, a to su moj Linkedin profil, te moj Youtube kanal koje sam napravio koristeći HTML & CSS.
+          Pored ličnih informacija, sa strane se također nalazi i link za moj github profil, gdje sam svakodnevno ažurirao promjene na datom projektu i gdje možete pogledati cjelokupan projekat, od prve do posljednje promjene.
+        </div>
+        <div class="motivational-letter1">
+          Hvala vam za vaše vrijeme.
+        <br>S poštovanjem,
 
-Hvala vam za vaše vrijeme.
+        <br>Emir Alić.
+        </div>
 
       </div>
     </div>
