--- a/website/templates/youtube.html
+++ b/website/templates/youtube.html
@@ -127,7 +127,8 @@
         </div>
 
     </div>
-    <div class="header">
+    <div class="scroll-together">
+        <div class="header">
             <div style="background-color: white;">
                 <button class="hamburger-button">
                     <img class="hamburger-menu" src="static/youtube-images/header-icons/hamburger-menu.svg">
@@ -137,6 +138,11 @@
             <div>
                 <a href="https://www.youtube.com/c/theballgame">
                 <img class="youtube-logo" src="static/youtube-images/header-icons/youtube-logo.svg">
+                </a>
+            </div>
+            <div>
+                <a href="http://127.0.0.1:5000/home">
+                <img class="back-home" src="static/linkedin-images/header-images/back-home-icon.png">
                 </a>
             </div>
             <div>
@@ -169,7 +175,55 @@
                 <img class="right-profile-picture" src="static/youtube-images/header-icons/profile-picture.jpg">
             </div>
 
+        </div>
+        <div class="home-videos-shorts">
+        <div class="home-videos-shorts-row">
+
+            <div>
+                <a class="underline" href="https://www.youtube.com/c/theballgame">
+                <p class="home">HOME</p>
+                </a>
+            </div>
+            <div>
+                <a class="underline" href="https://www.youtube.com/@TheBallGame/videos">
+                <p class="home">VIDEOS</p>
+                </a>
+            </div>
+            <div>
+                <a class="underline" href="https://www.youtube.com/@TheBallGame/shorts">
+                <p class="home">SHORTS</p>
+                </a>
+            </div>
+            <div>
+                <a class="underline" href="https://www.youtube.com/@TheBallGame/playlists">
+                <p class="home">PLAYLISTS</p>
+                </a>
+            </div>
+            <div>
+                <a class="underline" href="https://www.youtube.com/@TheBallGame/community">
+                <p class="home">COMMUNITY</p>
+                </a>
+            </div>
+            <div>
+                <a class="underline" href="https://www.youtube.com/@TheBallGame/channels">
+                <p class="home">CHANNELS</p>
+                </a>
+            </div>
+            <div>
+                <a class="underline" href="https://www.youtube.com/@TheBallGame/about">
+                <p class="home">ABOUT</p>
+                </a>
+            </div>
+            <div>
+                <img class="search" src="static/youtube-images/header-icons/search.svg">
+            </div>
+        </div>
+        <div class="underline-gray"></div>
+
+        </div>
+
     </div>
+
     <div class="middle">
       <div class="picture">
           <div>
@@ -202,48 +256,7 @@
               </button>
           </div>
       </div>
-      <div class="home-videos-shorts">
-        <div>
-            <a class="underline" href="https://www.youtube.com/c/theballgame">
-            <p class="home">HOME</p>
-            </a>
-        </div>
-        <div>
-            <a class="underline" href="https://www.youtube.com/@TheBallGame/videos">
-            <p class="home">VIDEOS</p>
-            </a>
-        </div>
-        <div>
-            <a class="underline" href="https://www.youtube.com/@TheBallGame/shorts">
-            <p class="home">SHORTS</p>
-            </a>
-        </div>
-        <div>
-            <a class="underline" href="https://www.youtube.com/@TheBallGame/playlists">
-            <p class="home">PLAYLISTS</p>
-            </a>
-        </div>
-        <div>
-            <a class="underline" href="https://www.youtube.com/@TheBallGame/community">
-            <p class="home">COMMUNITY</p>
-            </a>
-        </div>
-        <div>
-            <a class="underline" href="https://www.youtube.com/@TheBallGame/channels">
-            <p class="home">CHANNELS</p>
-            </a>
-        </div>
-        <div>
-            <a class="underline" href="https://www.youtube.com/@TheBallGame/about">
-            <p class="home">ABOUT</p>
-            </a>
-        </div>
-        <div>
-            <img class="search" src="static/youtube-images/header-icons/search.svg">
-        </div>
 
-
-      </div>
       <div class="video-title-description">
         <div>
           <img class="thumbnail" src="static/youtube-images/thumbnail/thumbnail.webp">
