--- a/website/static/mpismo.css
+++ b/website/static/mpismo.css
@@ -6,7 +6,7 @@
      justify-content: space-between;
      position: relative;
      width: 50px;
-     height: 100%;
+     height: max-content;
      margin:0;
      padding:0;
      background-color: rgb(51, 102, 255);
@@ -14,7 +14,7 @@
 .line{
      position: relative;
      width: 5px;
-     height: 100%;
+     height: max-content;
      left: 50px;
      background-color: rgb(255, 77, 77);
 }
@@ -33,11 +33,13 @@
     color: rgb(255, 77, 77);
     font-weight: 500;
     text-align: center;
+    margin-left: -30px;
 
 }
 .image-name,
 .image-name1,
-.image-name2{
+.image-name2,
+.image-name3{
     border:none;
     height: 80px;
     width: 370px;
@@ -47,8 +49,6 @@
     background-color:white;
     cursor:pointer;
     margin: 20px 0 0 20px;
-
-
 }
 .image,
 .image2,
@@ -70,8 +70,12 @@
 .image1{
     height: 100px;
 }
+.image-name-made{
+    display:flex;
+    flex-direction: row;
+}
 .image-name2{
-    margin-top: 30px;
+    margin: 30px 0 0 20px;
 }
 
 .image2{
@@ -103,6 +107,7 @@
 .name6{
     text-decoration: none;
     color: black;
+    position:relative;
 }
 .line1{
      position: absolute;
@@ -126,4 +131,32 @@
     font-family: Roboto, Arial;
     font-size: 26px;
     font-weight: 500;
+}
+.dear,
+.motivational-letter,
+.motivational-letter1{
+    font-family: Roboto, Arial;
+    font-size: 16px;
+    margin: 40px 0 15px 0;
+}
+.motivational-letter{
+    margin: 20px 0 15px 0;
+    max-width: 850px;
+    text-align:justify;
+    line-height: 1.6;
+}
+.motivational-letter1{
+     line-height: 2;
+}
+.name7,
+.name8{
+    margin-top: 30px;
+    text-decoration:none;
+    color: black;
+}
+.name8{
+    margin-left: -5px;
+}
+.image-name3{
+    margin: 30px 0 20px 20px;
 }
